# RoverTeam-SPOT

./: .gitignore  README.md  main.py  pyproject.toml
setup/: 20-eth0.network  80-can.network  config.txt  spot.service
setup/Additional Items/: ExcControl  TestDrive  can_mon
setup/Additional Items/CustomCanbusKernelDriver/: build_dt.sh  mcp2517fd-20mhz-noirq.dtbo  mcp2517fd-20mhz-noirq.dts  mcpcustom.dtbo  mcpcustom.dts
setup/Additional Items/VirtualCam/: StartCameras.py
setup/Testing/: README_Testing.md
setup/Testing/VirtualCam/: Startup.sh
subprocesses/arm/: config.json5  process.py
subprocesses/arm/canbus/: MyActuator.py  ODrive.py
subprocesses/arm/gamepad_ws/: cors.py  receiver.py  server.py
subprocesses/arm/payloadControlBinaries/: README.md
subprocesses/cameras/: config.json5  process.py
subprocesses/cameras/scan_cameras/: core.py  scan_linux.py  scan_windows.py
subprocesses/cameras/stream_cameras/: core.py  stream_linux.py  stream_windows.py
subprocesses/cantelemetry/: config.json5  process.py
subprocesses/cantelemetry/canbus/: can_wrapper.py
subprocesses/cantelemetry/telemetry_ws/: server.py
subprocesses/drive/: config.json5  process.py
subprocesses/drive/canbus/: MyActuator.py  ODrive.py  canbus.py
subprocesses/drive/gamepad_ws/: receiver.py  server.py
subprocesses/excavator/: config.json5  process.py
subprocesses/telemetry/: config.json5  process.py
subprocesses/template/: config.json5  process.py
supervisor/: command_handler.py  config.json5  config_loader.py  core.py  logging.py  monitor.py  process_manager.py
(+20 files in other folders)
